| Bug #40244 | Optimized build of mysqld crashes when built with Sun Studio on SPARC | ||
|---|---|---|---|
| Submitted: | 22 Oct 2008 12:51 | Modified: | 12 Nov 2009 19:10 |
| Reporter: | Olav Sandstå | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: General | Severity: | S1 (Critical) |
| Version: | 6.0.8-alpha | OS: | Solaris (SPARC64) |
| Assigned to: | Zhenxing He | CPU Architecture: | Any |
| Tags: | pushbuild, Sun Studio | ||
[22 Oct 2008 12:51]
Olav Sandstå
[23 Oct 2008 9:49]
Olav Sandstå
Compiled the same binaries for 32 bit SPARC (just changed -m64 to -m32) and did the same test. No problems seen so it seems to be a problem with 64 bit SPARC binaries, not on 32 bit SPARC binaries.
[31 Oct 2008 5:04]
Zhenxing He
Patch has already been pushed to mysql-6.0-alik, and merged to mysql-6.0 by alik
[16 Mar 2009 17:11]
Paul DuBois
Noted in 6.0.8 changelog. Optimized builds of mysqld crashed when built with Sun Studio on SPARC platforms.
[30 Sep 2009 11:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/85190 3110 He Zhenxing 2009-09-30 Backporting BUG#40244 Optimized build of mysqld crashes when built with Sun Studio on SPARC
[27 Oct 2009 9:50]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091027094604-9p7kplu1vd2cvcju) (version source revid:zhenxing.he@sun.com-20091026140226-uhnqejkyqx1aeilc) (merge vers: 6.0.14-alpha) (pib:13)
[27 Oct 2009 13:57]
Paul DuBois
Already fixed in 6.0.8.
[12 Nov 2009 8:21]
Bugs System
Pushed into 5.5.0-beta (revid:alik@sun.com-20091110093229-0bh5hix780cyeicl) (version source revid:alik@sun.com-20091027095744-rf45u3x3q5d1f5y0) (merge vers: 5.5.0-beta) (pib:13)
[12 Nov 2009 19:10]
Paul DuBois
Noted in 5.5.0 changelog.
