Backporting BUG#40244 Optimized build of mysqld crashes when built with Sun Studio on SPARC